# infra-metrics

./: .gitignore  PUBLISH.md  README.md  pyproject.toml  zabbix_template.yaml
.github/workflows/: ci.yml
infra_metrics/: __init__.py  _gpu.py  _metrics.py  _system.py  config.py  decorator.py  server.py
monitoring/: MONITORING_SETUP.md  generate_prometheus_config.py  grafana.service  prometheus.service  services.yaml  setup_monitoring.sh  web_dashboard.py  web_services.yaml
monitoring/grafana/dashboards/: ai_services.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
tests/: test_infra_metrics.py
